fixed spacing of cards

--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,8 @@ main {
 section {
   display: grid;
   place-items: center;
-  height: 100vh;
-  font-size: 32px;
+  /* height: 100vh; */
+  /* font-size: 32px; */
   font-weight: bold;
  
   
